--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
 	margin: auto;
 }
 
+.p5Canvas {
+	width: 480px !important;
+	height: 480px !important;
+}
+
 .title {
 	font-size: 24px;
 	font-family: System, monospace
